--- a/assignment2/style.css
+++ b/assignment2/style.css
@@ -28,8 +28,8 @@ h1 {
   border-radius: 16px;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
   text-align: center;
-  max-width: 400px;
-  width: 90%;
+  max-width: 500px;
+  width: 100%;
 }
 
 audio {
@@ -89,4 +89,9 @@ audio {
 label {
   font-family: Quicksand;
   font-weight: bold;
+}
+
+button {
+  display: inline-block; /* Keep the buttons on the same line */
+  white-space: nowrap; /* Prevent text wrapping */
 }
